--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 gfgf
+<html>
+    <head>
+        <title>Главная</title>
+    </head>
+    <body>
+        <header><h1>Это название уже спёрли</h1></header>
+        <section></section>
+        <footer>2020</footer>
+    </body>
+</html>
