--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
         <title>Главная</title>
     </head>
     <body>
-        <header><h1>Это название уже спёрли</h1></header>
+        <header><h1>Аниме это жизнь</h1></header>
         <section></section>
         <footer>2020</footer>
     </body>
