очередная попытка (кости)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
+<html lang="ru">
     <head>
-        <title>Главная</title>
+        <title>Если вы не знаете, что такое "панцу" то можете пройти мимо</title>
+        <meta charset="utf-8">
+        <meta name="discroption" content="Этот сайт предназначен для хиккикомори">
+        <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <header><h1>Это название уже спёрли</h1></header>
-        <section></section>
-        <footer>2020</footer>
+        <h1>Аниме это жизнь</h1>
     </body>
 </html>
