--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Если вы не знаете, что такое "панцу" то можете пройти мимо</title>
         <meta charset="utf-8">
-        <meta name="discroption" content="Этот сайт предназначен для хиккикомори">
+        <meta name="discription" content="Этот сайт предназначен для хиккикомори">
         <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут">
         <meta name="viewport" content="width=device-width">
     </head>
