--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="ru">
     <head>
-        <title>Если вы не знаете, что такое "панцу" то можете пройти мимо</title>
+        <title>Аниме это жизнь</title>
         <meta charset="utf-8">
         <meta name="discription" content="Этот сайт предназначен для хиккикомори">
         <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут">
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <h1>Аниме это жизнь</h1>
+        <h1>Если вы не знаете, что такое "панцу" то можете пройти мимо</h1>
     </body>
 </html>
