--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
         <title>Аниме это жизнь</title>
         <meta charset="utf-8">
         <meta name="discription" content="Этот сайт предназначен для хиккикомори">
-        <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут">
+        <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут, аниме тут">
         <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="/hohlova/style/main.css">
     </head>
     <body>
-        <h1>Если вы не знаете, что такое "панцу" то можете пройти мимо</h1>
+        <h1>Сайт для избранных</h1>
     </body>
 </html>
