--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <title>Аниме это жизнь</title>
         <meta charset="utf-8">
         <meta name="discription" content="Этот сайт предназначен для хиккикомори">
         <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут, аниме тут">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/main.css">
     </head>
     <body>
+        <div class="container">
+            <header class="site-header">
+                <img src="/image/logo.png" alt="logo" titel="Логотип">
+                <nav class="row">
+                    <ul>
+                        <li><a></a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section></section>
+            <footer class="site-footer">
+                <nav class="row">
+                    <div class="column">
+                        <ul>
+                            <li><a></a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </footer>
+        </div>
         <h1>Сайт для избранных</h1>
     </body>
 </html>
