--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <section></section>
             <footer class="site-footer">
                 <nav class="row">
-                    <div class="column">
-                        <ul>
+                    <div>
+                        <ul class="column">
                             <li><a></a></li>
                         </ul>
                     </div>
