--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <img src="/image/logo.png" alt="logo" titel="Логотип">
                 <nav class="row">
                     <ul>
-                        <li><a></a></li>
+                        <li><a>Пункт 1</a></li>
+                        <li><a>Пункт 2</a></li>
                     </ul>
                 </nav>
             </header>
@@ -23,7 +24,8 @@
                 <nav class="row">
                     <div>
                         <ul class="column">
-                            <li><a></a></li>
+                            <li><a>Пункт 1</a></li>
+                            <li><a>Пункт 2</a></li>
                         </ul>
                     </div>
                 </nav>
