--- a/index.html
+++ b/index.html
@@ -7,29 +7,38 @@
         <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут, аниме тут">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/main.css">
+        <link rel="stylesheet" href="/hohlova/style/outline.css">
     </head>
     <body>
-        <div class="container">
-            <header class="site-header">
-                <img src="/image/logo.png" alt="logo" titel="Логотип">
-                <nav class="row">
-                    <ul>
-                        <li><a>Пункт 1</a></li>
-                        <li><a>Пункт 2</a></li>
+        <header>
+            <div class="container">
+                <nav>
+                    <ul class="row">
+                        <li>Пункт 1</li>
+                        <li>Пункт 2</li>
                     </ul>
                 </nav>
-            </header>
-            <section></section>
-            <footer class="site-footer">
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <section class="col-3"></section>
+                <aside class="col-1"></aside>
+            </div>
+        </main>
+        <footer>
+            <div class="container">
                 <nav class="row">
-                    <div>
-                        <ul class="column">
-                            <li><a>Пункт 1</a></li>
-                            <li><a>Пункт 2</a></li>
-                        </ul>
-                    </div>
+                    <ul class="column">
+                        <li>Пункт 1</li>
+                        <li>Пункт 2</li>
+                    </ul>
+                    <ul class="column">
+                        <li>Пункт 1</li>
+                        <li>Пункт 2</li>
+                    </ul>
                 </nav>
-            </footer>
-        </div>
+            </div>
+        </footer>
     </body>
 </html>
