--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <body>
         <header>
             <div class="container">
+                <div class="col-1">
+                    <a hfer="#"></a>
+                        <img scr="/images/logo.png" alt="logo" title="Логотип">
+                </div>
+                <div class="col-3"></div>
                 <nav>
                     <ul class="row">
-                        <li>Пункт 1</li>
-                        <li>Пункт 2</li>
+                        <li><a href="#">Пункт 1</a></li>
+                        <li><a href="#">Пункт 2</a></li>
                     </ul>
                 </nav>
+                <div class="col-1"></div>
+                <div class="button"><a href="#">Кнопка</a></div>
+<!--                # - это ссылка на страницу-->
             </div>
         </header>
         <main>
@@ -29,16 +37,18 @@
         </main>
         <footer>
             <div class="container">
-                <nav class="row">
-                    <ul class="column">
-                        <li>Пункт 1</li>
-                        <li>Пункт 2</li>
-                    </ul>
-                    <ul class="column">
-                        <li>Пункт 1</li>
-                        <li>Пункт 2</li>
-                    </ul>
-                </nav>
+                <div class="col-1"></div>
+                <div class="col-4"></div>
+                    <nav class="row">
+                        <ul class="column">
+                            <li>Пункт 1</li>
+                            <li>Пункт 2</li>
+                        </ul>
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                    </nav>
             </div>
         </footer>
     </body>
