--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                         <li><a href="#">Пункт 2</a></li>
                     </ul>
                 </nav>
-                <div class="col-1"></div>
+                <div class="col-1">
                 <div class="button"><a href="#">Кнопка</a></div>
 <!--                # - это ссылка на страницу-->
+                </div>
             </div>
         </header>
         <main>
