--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <div class="col-4"></div>
                     <nav class="row">
                         <ul class="column">
-                            <li>Пункт 1</li>
-                            <li>Пункт 2</li>
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
                         </ul>
                         <ul class="column">
                             <li><a href="#">Пункт 1</a></li>
