--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <title>FirAnime</title>
+        <title>AniFeaza.me</title>
         <meta charset="utf-8">
-        <meta name="discription" content="FirAnime">
+        <meta name="discription" content="AniFeaza">
         <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут, аниме тут, фираниме, фир аниме, аниме фир, анимефир">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/main.css">
