--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>AniFeaza.me</title>
         <meta charset="utf-8">
         <meta name="discription" content="AniFeaza">
-        <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут, аниме тут, фираниме, фир аниме, аниме фир, анимефир">
+        <meta name="keywords" content="аниме, кошко-девочки, хикки, хикка, хика, хики, ониме, онлайн аниме, онлайн ониме, аниме сообщество, задротим тут, аниме тут, анифеза, ани феза, аниме феза, анимефеза, анифаза, ани фаза, анимефаза, аниме фаза">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/main.css">
     </head>
@@ -12,7 +12,8 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                        <img scr="/images/logo.png" alt="logo" title="Логотип">
+                    <img scr="/images/logo.png" alt="logo" title="Логотип">
+                    <a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a>
                 </div>
                 <div class="col-3"></div>
                 <nav>
@@ -22,21 +23,32 @@
                     </ul>
                 </nav>
                 <div class="col-1">
-                <div class="button"><a href="#">Кнопка</a></div>
+                <a href="#">Кнопка</a>
 <!--                # - это ссылка на страницу-->
                 </div>
             </div>
         </header>
         <main>
             <div class="container">
-                <aside class="col-1"></aside>
-                <section class="col-3"></section>
+                <aside class="col-1"><ul class="column"></ul></aside>
+                <section class="col-3">
+                    <h1>Заголовок 1</h1>
+                    <p>Какое-то описание по теме заголовка</p>
+                </section>
+                <section class="col-3">
+                    <h1>Заголовок 2</h1>
+                    <p>Какое-то описание по теме заголовка</p>
+                </section>
+                <section class="col-3">
+                    <h1>Заголовок 3</h1>
+                    <p>Какое-то описание по теме заголовка</p>
+                </section>
                 <aside class="col-1"></aside>
             </div>
         </main>
         <footer>
             <div class="container">
-                <div class="col-1"></div>
+                <div class="col-1"><a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a></div>
                 <div class="col-4"></div>
                     <nav class="row">
                         <ul class="column">
