--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img scr="/images/logo.png" alt="logo" title="Логотип">
                     <a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a>
                 </div>
                 <div class="col-3"></div>
@@ -30,17 +29,25 @@
         </header>
         <main>
             <div class="container">
-                <aside class="col-1"><ul class="column"></ul></aside>
+                <aside class="col-1">
+                    <ul class="column">
+                        <li><a href="#">Пункт 1</a></li>
+                        <li><a href="#">Пункт 2</a></li>                     <li><a href="#">Пункт 3</a></li>
+                        <li><a href="#">Пункт 4</a></li>
+                    </ul>
+                </aside>
                 <section class="col-3">
                     <h1>Заголовок 1</h1>
                     <p>Какое-то описание по теме заголовка</p>
-                </section>
-                <section class="col-3">
-                    <h1>Заголовок 2</h1>
+                    <h2>Заголовок 1</h2>
                     <p>Какое-то описание по теме заголовка</p>
-                </section>
-                <section class="col-3">
-                    <h1>Заголовок 3</h1>
+                    <h3>Заголовок 1</h3>
+                    <p>Какое-то описание по теме заголовка</p>
+                    <h4>Заголовок 1</h4>
+                    <p>Какое-то описание по теме заголовка</p>
+                    <h5>Заголовок 1</h5>
+                    <p>Какое-то описание по теме заголовка</p>
+                    <h6>Заголовок 1</h6>
                     <p>Какое-то описание по теме заголовка</p>
                 </section>
                 <aside class="col-1"></aside>
@@ -48,7 +55,9 @@
         </main>
         <footer>
             <div class="container">
-                <div class="col-1"><a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a></div>
+                <div class="col-1">
+                    <a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a>
+                </div>
                 <div class="col-4"></div>
                     <nav class="row">
                         <ul class="column">
