--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a>
+                    <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="logo" title="Главная"></a>
                 </div>
                 <div class="col-3"></div>
                 <nav>
@@ -56,7 +56,7 @@
         <footer>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img class="logo" src="/images/logo.png" alt="logo" title="Главная"></a>
+                    <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="logo" title="Главная"></a>
                 </div>
                 <div class="col-4"></div>
                     <nav class="row">
