--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <aside class="col-1">
                     <ul class="column">
                         <li><a href="#">Пункт 1</a></li>
-                        <li><a href="#">Пункт 2</a></li>                     <li><a href="#">Пункт 3</a></li>
+                        <li><a href="#">Пункт 2</a></li>
+                        <li><a href="#">Пункт 3</a></li>
                         <li><a href="#">Пункт 4</a></li>
                     </ul>
                 </aside>
