--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="logo" title="Главная"></a>
+                    <a href="#"><img class="logo" src="/hohlova/images/133.png" alt="logo" title="Главная"></a>
                 </div>
-                <div class="col-3"></div>
+                <div class="col-3">
                     <nav>
                         <ul class="row">
                             <li><a href="#">Пункт 1</a></li>
                             <li><a href="#">Пункт 2</a></li>
                         </ul>
                     </nav>
+                </div>
                 <div class="col-1">
                 <a href="#">Кнопка</a>
 <!--                # - это ссылка на страницу-->
