--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img class="logo" src="/hohlova/images/133.png" alt="logo" title="Главная"></a>
+                    <a href="#">
+                        <img class="logo" src="/hohlova/images/header.png" alt="logo" title="Главная">
+                    </a>
                 </div>
                 <div class="col-3">
                     <nav>
@@ -58,9 +60,11 @@
         <footer>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="logo" title="Главная"></a>
+                    <a href="#">
+                        <img class="logo" src="/hohlova/images/footer.png" alt="logo" title="Главная">
+                    </a>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-4">
                     <nav class="row">
                         <ul class="column">
                             <li><a href="#">Пункт 1</a></li>
@@ -71,6 +75,7 @@
                             <li><a href="#">Пункт 2</a></li>
                         </ul>
                     </nav>
+                </div>
             </div>
         </footer>
     </body>
