--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                <a href="#">Кнопка</a>
+                    <a href="#">Кнопка</a>
 <!--                # - это ссылка на страницу-->
                 </div>
             </div>
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="col-1">
                     <a href="#">
-                        <img class="logo" src="/hohlova/images/footer.png" alt="logo" title="Главная">
+                        <img class="logo" src="/hohlova/images/footer1.png" alt="logo" title="Главная">
                     </a>
                 </div>
                 <div class="col-4">
