--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                         <ul class="row">
                             <li><a href="#">Пункт 1</a></li>
                             <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Пункт 3</a></li>
+                            <li><a href="#">Пункт 4</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -69,10 +71,14 @@
                         <ul class="column">
                             <li><a href="#">Пункт 1</a></li>
                             <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Пункт 3</a></li>
+                            <li><a href="#">Пункт 4</a></li>
                         </ul>
                         <ul class="column">
                             <li><a href="#">Пункт 1</a></li>
                             <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Пункт 3</a></li>
+                            <li><a href="#">Пункт 4</a></li>
                         </ul>
                     </nav>
                 </div>
