бум.бум.бумбокс

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="col-1">
                     <a href="#">
-                        <img class="logo" src="/hohlova/images/Резервная_копия_аниме индеец.png" alt="logo" title="Главная">
+                        <img class="logo" src="/hohlova/images/Логотип.png" alt="logo" title="Главная">
                     </a>
                 </div>
                 <div class="col-3">
