--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
+                    <a href="#" class="button">Кнопка</a>
                     <a href="#">
                         <img class="logo" src="/hohlova/images/Резервная_копия_аниме индеец.png" alt="logo" title="Главная">
                     </a>
@@ -27,7 +28,8 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#">Кнопка</a>
+                    <a href="#" class="button">Кнопка</a>
+<!--                    <a href="#">Кнопка</a>-->
 <!--                # - это ссылка на страницу-->
                 </div>
             </div>
@@ -62,6 +64,7 @@
         <footer>
             <div class="container">
                 <div class="col-1">
+                    <a href="#" class="button">Кнопка</a>
                     <a href="#">
                         <img class="logo" src="/hohlova/images/footer1.png" alt="logo" title="Главная">
                     </a>
