--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#" class="button">Кнопка</a>
                     <a href="#">
                         <img class="logo" src="/hohlova/images/Резервная_копия_аниме индеец.png" alt="logo" title="Главная">
                     </a>
@@ -28,8 +27,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#" class="button">Кнопка</a>
-<!--                    <a href="#">Кнопка</a>-->
+                    <a href="#">Кнопка</a>
 <!--                # - это ссылка на страницу-->
                 </div>
             </div>
@@ -37,26 +35,28 @@
         <main>
             <div class="container">
                 <aside class="col-1">
-                    <ul class="column">
-                        <li><a href="#">Пункт 1</a></li>
-                        <li><a href="#">Пункт 2</a></li>
-                        <li><a href="#">Пункт 3</a></li>
-                        <li><a href="#">Пункт 4</a></li>
-                    </ul>
+                    <nav>
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Пункт 3</a></li>
+                            <li><a href="#">Пункт 4</a></li>
+                        </ul>
+                    </nav>
                 </aside>
                 <section class="col-3">
                     <h1>Заголовок 1</h1>
-                    <p>Какое-то описание по теме заголовка</p>
+                    <p></p>
                     <h2>Заголовок 2</h2>
-                    <p>Какое-то описание по теме заголовка</p>
+                    <p></p>
                     <h3>Заголовок 3</h3>
-                    <p>Какое-то описание по теме заголовка</p>
+                    <p></p>
                     <h4>Заголовок 4</h4>
-                    <p>Какое-то описание по теме заголовка</p>
+                    <p></p>
                     <h5>Заголовок 5</h5>
-                    <p>Какое-то описание по теме заголовка</p>
+                    <p></p>
                     <h6>Заголовок 6</h6>
-                    <p>Какое-то описание по теме заголовка</p>
+                    <p></p>
                 </section>
                 <aside class="col-1"></aside>
             </div>
@@ -64,7 +64,6 @@
         <footer>
             <div class="container">
                 <div class="col-1">
-                    <a href="#" class="button">Кнопка</a>
                     <a href="#">
                         <img class="logo" src="/hohlova/images/footer1.png" alt="logo" title="Главная">
                     </a>
