--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#">Кнопка</a>
+                    <a href="#" class="button">Кнопка</a>
 <!--                # - это ссылка на страницу-->
                 </div>
             </div>
