--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="col-1">
                     <a href="#">
-                        <img class="logo" src="/hohlova/images/footer.png" alt="logo" title="Главная">
+                        <img class="logo" src="/hohlova/images/footer2.png" alt="logo" title="Главная">
                     </a>
                 </div>
                 <div class="col-4">
