--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                         <img class="logo" src="/hohlova/images/footer2.png" alt="logo" title="Главная">
                     </a>
                 </div>
-                <div class="col-4">
-                    <nav class="row">
+                <div class="col-4">                    <nav class="row">
                         <ul class="column">
                             <li><a href="#">Пункт 1</a></li>
                             <li><a href="#">Пункт 2</a></li>
