--- a/space.html
+++ b/space.html
@@ -18,25 +18,13 @@
                         </a>
                     </div>
                     <div class="col-3">
-                        <ul class="site-menu">
+                        <ul class="row">
                             <li><a href="#">Компания</a></li>
                             <li><a href="#">Каталог</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </div>
                     <div class="col-1">
-                        <ul class="contacts-menu">
-                            <li>
-                                <a href="#" class="icon icon-mail" title="Написать нам">
-                                    <span class="visually-hidden">Написать нам</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="icon icon-phone" title="Позвонить нам">
-                                    <span class="visually-hidden">Позвонить нам</span>
-                                </a>
-                            </li>
-                        </ul>
                     </div>
                 </nav>
             </div>
