--- a/space.html
+++ b/space.html
@@ -3,7 +3,7 @@
     <head>
         <title>Полет на Луну</title>
         <meta charset="utf-8">
-        <meta name="description" content="">
+        <meta name="description" content="SpaceZ">
         <meta name="keywords" content="полет на луну, луна на полет, полёт на луну, луна на полёт, луна взлёт, луна взлет">
         <meta name="viewport" content="with=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/space.css">
@@ -25,6 +25,7 @@
                         </ul>
                     </div>
                     <div class="col-1">
+                        <a href="#" class="icon-mail">почта</a>
                     </div>
                 </nav>
             </div>
