--- a/space.html
+++ b/space.html
@@ -25,7 +25,7 @@
                         </ul>
                     </div>
                     <div class="col-1">
-                        <a href="#" class="icon-mail">почта</a>
+                        <img class="icon-mail" src="/hohlova/images/icon-mail.png" alt="SpaceZ">
                     </div>
                 </nav>
             </div>
