--- a/space.html
+++ b/space.html
@@ -25,7 +25,7 @@
                         </ul>
                     </div>
                     <div class="col-1">
-                        <img class="icon-mail" src="/hohlova/images/mail-icon.png">
+                        <img class="icon-mail" url="/hohlova/images/mail-icon.png">
                     </div>
                 </nav>
             </div>
