--- a/space.html
+++ b/space.html
@@ -26,6 +26,7 @@
                     </div>
                     <div class="col-1">
                         <img class="icon-mail" url="/hohlova/images/mail-icon.png">
+                        <img class="icon-phone" url="/hohlova/images/phone-icon.png">
                     </div>
                 </nav>
             </div>
