--- a/space.html
+++ b/space.html
@@ -18,7 +18,7 @@
                         </a>
                     </div>
                     <div class="col-3">
-                        <ul class="row">
+                        <ul class="column">
                             <li><a href="#">Компания</a></li>
                             <li><a href="#">Каталог</a></li>
                             <li><a href="#">Контакты</a></li>
