--- a/space.html
+++ b/space.html
@@ -25,8 +25,12 @@
                         </ul>
                     </div>
                     <div class="col-1">
-                        <img class="icon-mail" url="/hohlova/images/mail-icon.png">
-                        <img class="icon-phone" url="/hohlova/images/phone-icon.png">
+                        <a href="#">
+                            <img class="icon-mail" url="/hohlova/images/mail-icon.png">
+                        </a>
+                        <a href="#">
+                            <img class="icon-phone" url="/hohlova/images/phone-icon.png">
+                        </a>
                     </div>
                 </nav>
             </div>
