--- a/space.html
+++ b/space.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="полет на луну, луна на полет, полёт на луну, луна на полёт, луна взлёт, луна взлет">
         <meta name="viewport" content="with=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/space.css">
+        <link rel="stylesheet" href="/hohlova/style/outline.css">
     </head>
     <body>
         <header>
