--- a/space.html
+++ b/space.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="col-3">
                         <nav class="nav">
-                            <ul class="column">
+                            <ul class="row">
                                 <li><a href="#">Компания</a></li>
                                 <li><a href="#">Каталог</a></li>
                                 <li><a href="#">Контакты</a></li>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-1">
                         <a href="#">
-                            <img class="icon-mail" url="/hohlova/images/mail-icon.png">
+                            <img class="icon-mail" src="/hohlova/images/mail-icon.png" alt="Написать нам">
                         </a>
                         <a href="#">
                             <img class="icon-phone" url="/hohlova/images/phone-icon.png">
