--- a/space.html
+++ b/space.html
@@ -18,7 +18,7 @@
                         </a>
                     </div>
                     <div class="col-3">
-                        <nav class="nav">
+                        <nav>
                             <ul class="row">
                                 <li><a href="#">Компания</a></li>
                                 <li><a href="#">Каталог</a></li>
