--- a/space.html
+++ b/space.html
@@ -12,28 +12,28 @@
     <body>
         <header>
             <div class="container">
-                    <div class="col-1">
+                <div class="col-1">
+                    <a href="#">
+                        <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
+                    </a>
+                </div>
+                <div class="col-3">
+                    <nav>
+                        <ul class="row">
+                            <li><a href="#">Компания</a></li>
+                            <li><a href="#">Каталог</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1">
+                    <a href="#">
+                        <img class="icon-mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
+                    </a>
                         <a href="#">
-                            <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная">
-                        </a>
-                    </div>
-                    <div class="col-3">
-                        <nav>
-                            <ul class="row">
-                                <li><a href="#">Компания</a></li>
-                                <li><a href="#">Каталог</a></li>
-                                <li><a href="#">Контакты</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="col-1">
-                        <a href="#">
-                            <img class="icon-mail" src="/hohlova/images/mail-icon.png" alt="Написать нам">
-                        </a>
-                        <a href="#">
-                            <img class="icon-phone" url="/hohlova/images/phone-icon.png">
-                        </a>
-                    </div>
+                         <img class="icon-phone" src="/hohlova/images/phone-icon.png" alt="Телефон" title="Позвонить нам">
+                    </a>
+                </div>
             </div>
         </header>
         <section class="moon">
