--- a/space.html
+++ b/space.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="col-1">
                     <a href="#">
-                        <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
+                        <img class="logo" src="/hohlova/images/logo.png">
                     </a>
                 </div>
                 <div class="col-3">
@@ -28,10 +28,10 @@
                 </div>
                 <div class="col-1">
                     <a href="#">
-                        <img class="mail" src="/hohlova/images/mail-icon.png" alt="Маил" title="Написать нам">
+                        <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                     </a>
                         <a href="#">
-                         <img class="phone" src="/hohlova/images/phone-icon.png" alt="Телефон" title="Позвонить нам">
+                         <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                     </a>
                 </div>
             </div>
