--- a/space.html
+++ b/space.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="col-1">
                     <a href="#">
-                        <img class="logo" src="/hohlova/images/logo.png">
+                        <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
                     </a>
                 </div>
                 <div class="col-3">
@@ -28,36 +28,38 @@
                 </div>
                 <div class="col-1">
                     <a href="#">
-                        <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
+                        <img class="icon-mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                     </a>
                         <a href="#">
-                         <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
+                         <img class="icon-phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                     </a>
                 </div>
             </div>
         </header>
-        <section class="moon">
-            <div class="container">
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-            </div>
-        </section>
-        <section class="advantages">
-            <div class="container">
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-            </div>
-        </section>
-        <section class="content">
-            <div class="container">
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-                <div class="col-2"></div>
-            </div>
-        </section>
+        <main>
+            <section class="moon">
+                <div class="container">
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                </div>
+            </section>
+            <section class="advantages">
+                <div class="container">
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                </div>
+            </section>
+            <section class="content">
+                <div class="container">
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                </div>
+            </section>
+        </main>
         <footer>
             <div class="container">
                 <div class="col-2"></div>
