--- a/space.html
+++ b/space.html
@@ -28,10 +28,10 @@
                 </div>
                 <div class="col-1">
                     <a href="#">
-                        <img class="icon-mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
+                        <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                     </a>
                         <a href="#">
-                         <img class="icon-phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
+                         <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                     </a>
                 </div>
             </div>
