--- a/space.html
+++ b/space.html
@@ -29,15 +29,16 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#">
-                        <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
-                        <li><a></a></li>
-                        <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
-                    </a>
+                    <nav>
+                        <a href="#">
+                            <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
+                            <li><a></a></li>
+                            <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
+                        </a>
+                    </nav>
                 </div>
             </div>
         </header>
-        <main>
             <section class="moon">
                 <div class="container">
                     <div class="col-2"></div>
@@ -60,7 +61,6 @@
                     <div class="col-2"></div>
                 </div>
             </section>
-        </main>
         <footer>
             <div class="container">
                 <div class="col-2"></div>
