--- a/space.html
+++ b/space.html
@@ -29,7 +29,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <nav>
+                    <nav class="row">
                         <a href="#">
                             <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                             <li><a></a></li>
