--- a/space.html
+++ b/space.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="полет на луну, луна на полет, полёт на луну, луна на полёт, луна взлёт, луна взлет">
         <meta name="viewport" content="with=device-width, initial-scale=1">
         <link rel="stylesheet" href="/hohlova/style/space.css">
-        <link rel="stylesheet" href="/hohlova/style/outline.css">
+<!--        <link rel="stylesheet" href="/hohlova/style/outline.css">-->
     </head>
     <body>
         <header>
@@ -17,7 +17,6 @@
                         <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
                     </a>
                 </div>
-
                 <nav>
                     <div class="col-3">
                         <ul class="row">
@@ -36,15 +35,14 @@
                         </a>
                     </div>
                 </nav>
-
             </div>
+        </header>
             <section class="moon">
                 <div class="container">
                     <div class="col-2"></div>
                     <div class="col-2"></div>
                 </div>
             </section>
-        </header>
             <section class="advantages">
                 <div class="container">
                     <div class="col-1"></div>
