--- a/space.html
+++ b/space.html
@@ -17,21 +17,21 @@
                         <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
                     </a>
                 </div>
-
                 <nav>
                     <div class="col-3">
 
-                        <ul class="row">
-                            <li><a href="#">Компания</a></li>
-                            <li><a></a></li>
-                            <li><a href="#">Каталог</a></li>
-                            <li><a></a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
+                            <ul class="row">
+                                <li><a href="#">Компания</a></li>
+                                <li><a></a></li>
+                                <li><a href="#">Каталог</a></li>
+                                <li><a></a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
 
                     </div>
+                </nav>
+                <nav>
                     <div class="col-1">
-
                         <a href="#">
                             <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                             <a></a>
@@ -39,7 +39,6 @@
                         </a>
                     </div>
                 </nav>
-
             </div>
         </header>
             <section class="moon">
