--- a/space.html
+++ b/space.html
@@ -33,7 +33,8 @@
                     <nav>
                         <a href="#">
                             <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
-                            <a></a>
+                        </a>
+                        <a href="#">
                             <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                         </a>
                     </nav>
