--- a/space.html
+++ b/space.html
@@ -17,29 +17,32 @@
                         <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
                     </a>
                 </div>
-                <div class="col-3">
-                    <nav>
-                        <ul class="row">
-                            <li><a href="#">Компания</a></li>
-                            <li><a></a></li>
-                            <li><a href="#">Каталог</a></li>
-                            <li><a></a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
-                    </nav>
-                </div>
 
-                <div class="col-1">
-                    <nav>
-                        <a href="#">
-                            <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
-                        </a>
-                        <li><a></a></li>
-                        <a href="#">
-                            <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
-                        </a>
-                    </nav>
-                </div>
+                <nav>
+                    <div class="col-3">
+<!--                    <nav>-->
+                            <ul class="row">
+                                <li><a href="#">Компания</a></li>
+                                <li><a></a></li>
+                                <li><a href="#">Каталог</a></li>
+                                <li><a></a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
+<!--                    </nav>-->
+                    </div>
+
+                    <div class="col-1">
+<!--                    <nav>-->
+                            <a href="#">
+                                <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
+                            </a>
+                            <li><a></a></li>
+                            <a href="#">
+                                <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
+                            </a>
+<!--                    </nav>-->
+                    </div>
+                </nav>
             </div>
         </header>
             <section class="moon">
