--- a/space.html
+++ b/space.html
@@ -20,7 +20,7 @@
 
                 <nav>
                     <div class="col-3">
-<!--                    <nav>-->
+                        <nav>
                             <ul class="row">
                                 <li><a href="#">Компания</a></li>
                                 <li><a></a></li>
@@ -28,19 +28,19 @@
                                 <li><a></a></li>
                                 <li><a href="#">Контакты</a></li>
                             </ul>
-<!--                    </nav>-->
+                        </nav>
                     </div>
 
                     <div class="col-1">
-<!--                    <nav>-->
+                        <nav>
                             <a href="#">
                                 <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                             </a>
-                            <li><a></a></li>
+                            <a></a>
                             <a href="#">
                                 <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                             </a>
-<!--                    </nav>-->
+                        </nav>
                     </div>
                 </nav>
             </div>
