--- a/space.html
+++ b/space.html
@@ -24,7 +24,6 @@
                             <li><a></a></li>
                             <li><a href="#">Каталог</a></li>
                             <li><a></a></li>
-                            <pre>   </pre>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </nav>
@@ -34,7 +33,7 @@
                         <a href="#">
                             <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                         </a>
-                        <pre>   </pre>
+                        <li><a href="#">Контакты</a></li>
                         <a href="#">
                             <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                         </a>
