--- a/space.html
+++ b/space.html
@@ -29,11 +29,11 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <nav>
+                    <nav class="row">
                         <a href="#">
                             <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                         </a>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#"></a></li>
                         <a href="#">
                             <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                         </a>
