--- a/space.html
+++ b/space.html
@@ -41,6 +41,7 @@
                 </div>
             </div>
         </header>
+        <main>
             <section class="moon">
                 <div class="container">
                     <div class="col-2"></div>
@@ -63,6 +64,7 @@
                     <div class="col-2"></div>
                 </div>
             </section>
+        </main>
         <footer>
             <div class="container">
                 <div class="col-2"></div>
