--- a/space.html
+++ b/space.html
@@ -42,28 +42,30 @@
             </div>
         </header>
         <main>
-            <section class="moon">
-                <div class="container">
+            <div class="container">
+                <section class="moon">
+<!--                <div class="container">-->
+                        <div class="col-2"></div>
+                        <div class="col-2"></div>
+<!--                </div>-->
+                </section>
+                <section class="advantages">
+<!--                <div class="container">-->
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
+                        <div class="col-1"></div>
+<!--                </div>-->
+                </section>
+                <section class="content">
+<!--                <div class="container">-->
                     <div class="col-2"></div>
                     <div class="col-2"></div>
-                </div>
-            </section>
-            <section class="advantages">
-                <div class="container">
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                </div>
-            </section>
-            <section class="content">
-                <div class="container">
                     <div class="col-2"></div>
                     <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                </div>
-            </section>
+<!--                </div>-->
+                </section>
+            </div>
         </main>
         <footer>
             <div class="container">
