--- a/space.html
+++ b/space.html
@@ -40,15 +40,15 @@
                     </nav>
                 </div>
             </div>
+            <section class="moon">
+                <div class="container">
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
+                </div>
+            </section>
         </header>
         <main>
             <div class="container">
-                <section class="moon">
-<!--                <div class="container">-->
-                        <div class="col-2"></div>
-                        <div class="col-2"></div>
-<!--                </div>-->
-                </section>
                 <section class="advantages">
 <!--                <div class="container">-->
                         <div class="col-1"></div>
