extra extra extra extra

--- a/space.html
+++ b/space.html
@@ -33,7 +33,7 @@
                         <a href="#">
                             <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
                         </a>
-                        <li><a href="#"></a></li>
+                        <li><a></a></li>
                         <a href="#">
                             <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
                         </a>
@@ -42,31 +42,38 @@
             </div>
             <section class="moon">
                 <div class="container">
+                    <div class="col-2">
+                        <h1>На луну и обратно</h1>
+                        <p>
+                            Космически крутой туризм.<br>
+                            Пакетные и индивидуальные туры по лучшим планетам галактики.
+                        </p>
+                        <a href="#" class="button">ПОДБОР ТУРА <img class="arrow" scr="hohlova/images/right-arrow-dark.png"></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="#">
+                            <img class="rocket" src="/hohlova/images/moon-rocket.png">
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </header>
+            <section class="advantages">
+                <div class="container">
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1"></div>
+                </div>
+            </section>
+            <section class="content">
+                <div class="container">
+                    <div class="col-2"></div>
+                    <div class="col-2"></div>
                     <div class="col-2"></div>
                     <div class="col-2"></div>
                 </div>
             </section>
-        </header>
-        <main>
-            <div class="container">
-                <section class="advantages">
-<!--                <div class="container">-->
-                        <div class="col-1"></div>
-                        <div class="col-1"></div>
-                        <div class="col-1"></div>
-                        <div class="col-1"></div>
-<!--                </div>-->
-                </section>
-                <section class="content">
-<!--                <div class="container">-->
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-                    <div class="col-2"></div>
-<!--                </div>-->
-                </section>
-            </div>
-        </main>
         <footer>
             <div class="container">
                 <div class="col-2"></div>
