--- a/space.html
+++ b/space.html
@@ -60,7 +60,12 @@
         </header>
             <section class="advantages">
                 <div class="container">
-                    <div class="col-1"></div>
+                    <div class="col-1">
+                        <a href="#">
+                            <p>Комфортабельные ракеты отечественного производства.</p>
+                            <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
+                        </a>
+                    </div>
                     <div class="col-1"></div>
                     <div class="col-1"></div>
                     <div class="col-1"></div>
