--- a/space.html
+++ b/space.html
@@ -61,10 +61,12 @@
             <section class="advantages">
                 <div class="container">
                     <div class="col-1">
-                        <a href="#">
-                            <p>Комфортабельные ракеты отечественного производства.</p>
-                            <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
-                        </a>
+                        <nav class="row">
+                            <a href="#">
+                                <p>Комфортабельные ракеты отечественного производства.</p>
+                                <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
+                            </a>
+                        </nav>
                     </div>
                     <div class="col-1"></div>
                     <div class="col-1"></div>
