--- a/space.html
+++ b/space.html
@@ -43,7 +43,11 @@
             <section class="moon">
                 <div class="container">
                     <div class="col-2">
-                        <strong><h1>На луну и обратно</h1></strong>
+                        <h1>
+                            <strong>
+                                На луну и обратно
+                            </strong>
+                        </h1>
                         <p>
                             Космически крутой туризм.<br>
                             Пакетные и индивидуальные туры по лучшим планетам галактики.
