--- a/space.html
+++ b/space.html
@@ -50,7 +50,8 @@
                         </h1>
                         <p>
                             Космически крутой туризм.<br>
-                            Пакетные и индивидуальные туры по лучшим планетам галактики.
+                            Пакетные и индивидуальные туры по
+                            лучшим планетам галактики.
                         </p>
                         <a href="#" class="button">ПОДБОР ТУРА <img class="arrow" scr="hohlova/images/right-arrow-dark.png"></a>
                     </div>
