--- a/space.html
+++ b/space.html
@@ -48,11 +48,11 @@
                                 На луну и обратно
                             </strong>
                         </h1>
-                        <p>
-                            Космически крутой туризм.<br>
+                        <pre>
+                            Космически крутой туризм.
                             Пакетные и индивидуальные туры по
                             лучшим планетам галактики.
-                        </p>
+                        </pre>
                         <a href="#" class="button">ПОДБОР ТУРА <img class="arrow" scr="hohlova/images/right-arrow-dark.png"></a>
                     </div>
                     <div class="col-2">
@@ -68,14 +68,20 @@
                     <div class="col-1">
                         <nav class="row">
                             <a href="#">
-                                <p>Комфортабельные ракеты отечественного производства.</p>
-                                <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
+                                <pre>Комфортабельные ракеты отечественного производства.</pre>
+                                <img scr="/hohlova/images/advantage-icon-1.png">
                             </a>
                         </nav>
                     </div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
-                    <div class="col-1"></div>
+                    <div class="col-1">
+                        <nav class="row"><a href="#"><pre></pre></a></nav>
+                    </div>
+                    <div class="col-1">
+                        <nav class="row"><a href="#"><pre></pre></a></nav>
+                    </div>
+                    <div class="col-1">
+                        <nav class="row"><a href="#"><pre></pre></a></nav>
+                    </div>
                 </div>
             </section>
             <section class="content">
