--- a/space.html
+++ b/space.html
@@ -69,7 +69,7 @@
                         <nav class="row">
                             <a href="#">
                                 <pre>Комфортабельные ракеты отечественного производства.</pre>
-                                <img scr="/hohlova/images/advantage-icon-1.png">
+                                <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
                             </a>
                         </nav>
                     </div>
