--- a/space.html
+++ b/space.html
@@ -66,12 +66,12 @@
             <section class="advantages">
                 <div class="container">
                     <div class="col-1">
-                        <nav class="row">
-                            <a href="#">
-                                <pre>Комфортабельные ракеты отечественного производства.</pre>
-                                <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
-                            </a>
-                        </nav>
+                        <a href="#">
+                            <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
+                            <pre>
+                                Комфортабельные ракеты отечественного производства.
+                            </pre>
+                        </a>
                     </div>
                     <div class="col-1">
                         <nav class="row"><a href="#"><pre></pre></a></nav>
