--- a/space.html
+++ b/space.html
@@ -66,23 +66,36 @@
             <section class="advantages">
                 <div class="container">
                     <div class="col-1">
-                        <li>
-                            <a href="#">
-                                <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
-                                <pre>
-                                    Комфортабельные ракеты отечественного производства.
-                                </pre>
-                            </a>
-                        </li>
+                        <a href="#">
+                            <img class="advantage" scr="/hohlova/images/advantage-icon-1.png">
+                            <pre>
+                                Комфортабельные ракеты отечественного производства.
+                            </pre>
+                        </a>
                     </div>
                     <div class="col-1">
-                        <nav class="row"><a href="#"><pre></pre></a></nav>
+                        <a href="#">
+                            <img class="advantage" scr="/hohlova/images/advantage-icon-2.png">
+                            <pre>
+                                Вкусное и полезное космическое питание на борту.
+                            </pre>
+                        </a>
                     </div>
                     <div class="col-1">
-                        <nav class="row"><a href="#"><pre></pre></a></nav>
+                        <a href="#">
+                            <img class="advantage" scr="/hohlova/images/advantage-icon-3.png">
+                            <pre>
+                                Весь состав пилотов состоит из бывших космонавтов.
+                            </pre>
+                        </a>
                     </div>
                     <div class="col-1">
-                        <nav class="row"><a href="#"><pre></pre></a></nav>
+                        <a href="#">
+                            <img class="advantage" scr="/hohlova/images/advantage-icon-4.png">
+                            <pre>
+                                Экскурсии на луноходе на Море Ясности и Океан Бурь.
+                            </pre>
+                        </a>
                     </div>
                 </div>
             </section>
