--- a/space.html
+++ b/space.html
@@ -14,10 +14,10 @@
             <div class="container">
                 <div class="col-1">
                     <a href="#">
-                        <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ">
+                        <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная">
                     </a>
                 </div>
-                <div class="col-3">
+                <div class="col-6">
                     <nav>
                         <ul class="row">
                             <li><a href="#">Компания</a></li>
@@ -28,16 +28,9 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-1">
-                    <nav class="row">
-                        <a href="#">
-                            <img class="mail" src="/hohlova/images/mail-icon.png" title="Написать нам">
-                        </a>
-                        <li><a></a></li>
-                        <a href="#">
-                            <img class="phone" src="/hohlova/images/phone-icon.png" title="Позвонить нам">
-                        </a>
-                    </nav>
+                <div class="col-1 hader-icon">
+                        <a href="#"><img class="mail" src="/hohlova/images/mail-icon.png" alt="mail" title="Электронная почта"></a>
+                        <a href="#"><img class="phone" src="/hohlova/images/phone-icon.png" alt="phone" title="Телефон"></a>
                 </div>
             </div>
             <section class="moon">
