--- a/space.html
+++ b/space.html
@@ -13,9 +13,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#">
-                        <img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная">
-                    </a>
+                    <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная"></a>
                 </div>
                 <div class="col-6">
                     <nav>
@@ -54,14 +52,14 @@
                             <p>Комфортабельные ракеты отечественного производства.</p>
                         </div>
                         <div class="col-1 block-item">
-                                <img scr="/hohlova/images/advantage-icon-2.png">
-                                <p>Вкусное и полезное космическое питание на борту.</p>
+                            <img scr="/hohlova/images/advantage-icon-2.png">
+                            <p>Вкусное и полезное космическое питание на борту.</p>
                         </div>
                     </div>
                     <div class="block">
                         <div class="col-1 block-item">
-                                <img scr="/hohlova/images/advantage-icon-3.png">
-                                <p>Весь состав пилотов состоит из бывших космонавтов.</p>
+                            <img scr="/hohlova/images/advantage-icon-3.png">
+                            <p>Весь состав пилотов состоит из бывших космонавтов.</p>
                         </div>
                         <div class="col-1 block-item">
                             <img scr="/hohlova/images/advantage-icon-4.png">
@@ -107,7 +105,7 @@
             <div class="container">
                 <div class="block">
                     <div class="col-1">
-                        <a href="#"><img scr="/hohlova/images/logo.png" alt="logo" title="Главная"></a>
+                        <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная"></a>
                         <span>Space Z</span>
                         <p class="copyright">000 "Космос Зэ".
                         <br>
