--- a/space.html
+++ b/space.html
@@ -105,8 +105,7 @@
             <div class="container">
                 <div class="block">
                     <div class="col-1">
-                        <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная"></a>
-                        <span>Space Z</span>
+                        <a href="#"><img class="logo" src="/hohlova/images/logo.png" alt="SpaceZ" title="Главная"></a><span>Space Z</span>
                         <p class="copyright">000 "Космос Зэ".
                         <br>
                         Все права защищены.</p>
