--- a/space.html
+++ b/space.html
@@ -48,7 +48,7 @@
                 <div class="container">
                     <div class="block">
                         <div class="col-1 block-item">
-                            <img scr="/hohlova/images/advantage-icon-1.png">
+                            <img scr="/hohlova/images/advantage-icon-1png">
                             <p>Комфортабельные ракеты отечественного производства.</p>
                         </div>
                         <div class="col-1 block-item">
