--- a/space.html
+++ b/space.html
@@ -37,7 +37,7 @@
                         <p>Космически крутой туризм.
                         <br>
                         Пакетные и индивидуальные туры по лучшим планетам галактики.</p>
-                        <a href="#" class="btn btn-yellow">подбор тура</a>
+                        <a href="#" class="btn btn-yellow">Подбор тура</a>
                     </div>
                     <div class="col-1 moon-rocket">
                         <a href="#"><img src="/hohlova/images/moon-rocket.png"></a>
