--- a/space.html
+++ b/space.html
@@ -26,14 +26,14 @@
                 </div>
                 <div class="col-1 hader-icon">
                     <a href="#"><img src="/hohlova/images/mail-icon.png" alt="mail" title="Электронная почта"></a>
-                    <li><a></a></li>
+                    <li></li>
                     <a href="#"><img src="/hohlova/images/phone-icon.png" alt="phone" title="Телефон"></a>
                 </div>
             </div>
         </header>
             <section class="moon">
                 <div class="container">
-                    <div class="col-1">
+                    <div class="col-1 man">
                         <h1><strong>На луну и обратно</strong></h1>
                         <p>Космически крутой туризм.
                         <br>
