--- a/space.html
+++ b/space.html
@@ -50,21 +50,21 @@
                 <div class="container">
                     <div class="block">
                         <div class="col-1 block-item">
-                            <img scr="/hohlova/images/advantage-icon-1png">
+                            <img src="/hohlova/images/advantage-icon-1.png">
                             <p>Комфортабельные ракеты отечественного производства.</p>
                         </div>
                         <div class="col-1 block-item">
-                            <img scr="/hohlova/images/advantage-icon-2.png">
+                            <img src="/hohlova/images/advantage-icon-2.png">
                             <p>Вкусное и полезное космическое питание на борту.</p>
                         </div>
                     </div>
                     <div class="block">
                         <div class="col-1 block-item">
-                            <img scr="/hohlova/images/advantage-icon-3.png">
+                            <img src="/hohlova/images/advantage-icon-3.png">
                             <p>Весь состав пилотов состоит из бывших космонавтов.</p>
                         </div>
                         <div class="col-1 block-item">
-                            <img scr="/hohlova/images/advantage-icon-4.png">
+                            <img src="/hohlova/images/advantage-icon-4.png">
                             <p>Экскурсии на луноходе на Море Ясности и Океан Бурь.</p>
                         </div>
                     </div>
