--- a/space.html
+++ b/space.html
@@ -24,7 +24,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-1 hader-icon">
+                <div class="col-1 header-icon">
                     <p>
                         <a href="#"><img src="/hohlova/images/mail-icon.png" alt="mail" title="Электронная почта"></a>
                         <a href="#"><img src="/hohlova/images/phone-icon.png" alt="phone" title="Телефон"></a>
